Update app name and description to "Ultimate Twitter Tool" in manifest and settings files, enhancing branding and clarity.

--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitter Stats Analyzer - Settings</title>
+    <title>Ultimate Twitter Tool - Settings</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
     <style>
@@ -663,10 +663,10 @@
         <aside class="settings-sidebar">
             <div class="sidebar-header">
                 <div class="app-logo">
-                    <img src="icon.png" alt="Twitter Stats Analyzer">
+                    <img src="icon.png" alt="Ultimate Twitter Tool">
                 </div>
                 <div>
-                    <h1 class="app-title">Twitter Stats</h1>
+                    <h1 class="app-title">Ultimate Twitter Tool</h1>
                     <p class="app-version">v1.2.0</p>
                 </div>
             </div>
@@ -722,7 +722,7 @@
         <main class="settings-content">
             <div class="content-header">
                 <h1 class="content-title">Settings</h1>
-                <p class="content-subtitle">Customize your Twitter Stats Analyzer experience</p>
+                <p class="content-subtitle">Customize your Ultimate Twitter Tool experience</p>
             </div>
             
             <!-- User Preferences Section -->
@@ -1357,9 +1357,9 @@
                         <div class="settings-option">
                             <div class="about-info" style="width: 100%;">
                                 <div style="display: flex; align-items: center; gap: 20px;">
-                                    <img src="icon.png" alt="Twitter Stats Analyzer" width="80" height="80" style="border-radius: 12px;">
+                                    <img src="icon.png" alt="Ultimate Twitter Tool" width="80" height="80" style="border-radius: 12px;">
                                     <div>
-                                        <p style="font-size: 22px; font-weight: 600; margin-bottom: 5px;">Twitter Stats Analyzer</p>
+                                        <p style="font-size: 22px; font-weight: 600; margin-bottom: 5px;">Ultimate Twitter Tool</p>
                                         <p style="font-size: 16px; color: var(--light-text-secondary); margin-bottom: 15px;">Version 1.2.0</p>
                                     </div>
                                 </div>
@@ -1386,16 +1386,16 @@
                     <div class="settings-option settings-option-vertical">
                         <label class="toggle-label">Useful Links</label>
                         <div style="display: flex; flex-direction: column; gap: 10px; margin-top: 10px;">
-                            <a href="https://github.com/azorkai/twitter-stats" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                            <a href="https://github.com/azorkai/ultimate-twitter-tool" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
                                 <span style="font-size: 18px;">📦</span> GitHub Repository
                             </a>
-                            <a href="https://azorkai.com/twitter-stats/docs" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                            <a href="https://azorkai.com/ultimate-twitter-tool/docs" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
                                 <span style="font-size: 18px;">📚</span> Documentation
                             </a>
-                            <a href="https://azorkai.com/twitter-stats/feedback" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                            <a href="https://azorkai.com/ultimate-twitter-tool/feedback" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
                                 <span style="font-size: 18px;">💬</span> Feedback
                             </a>
-                            <a href="https://azorkai.com/twitter-stats/changelog" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                            <a href="https://azorkai.com/ultimate-twitter-tool/changelog" target="_blank" style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 8px;">
                                 <span style="font-size: 18px;">📝</span> Changelog
                             </a>
                         </div>
